--- a/package.json
+++ b/package.json
@@ -61,8 +61,9 @@
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
     "codelyzer": "^5.1.2",
-    "eslint": "^7.11.0",
     "cypress": "^5.3.0",
+    "cypress-plugin-tab": "^1.0.5",
+    "eslint": "^7.11.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~5.0.0",
