--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -103,17 +103,18 @@ definitions:
           - cypress/videos/**
     - step: &build-artifacts
         name: Build PWA Artifacts
-        image: cypress/base:10 # Because of Cypress dev dependency.
+        # image: cypress/base:10 # Because of Cypress dev dependency.
+        image: atlassian/default-image:2  # Image with Zip already installed
         script:
           - npm install -g @angular/cli
           - npm install -g @ionic/cli
           - npm ci
           - ionic build --prod
-          - zip -r $ZIP_FILE ./www/*
+          - zip -r dpp-$BITBUCKET_BUILD_NUMBER.zip ./www/*
         artifacts:
           # - node_modules/** # Save modules for next steps
           - www/**
-          - www/$ZIP_FILE
+          - dpp-*.zip
     # --------- Firebase Cloud Deployment ---------
     - step: &deploy-staging-to-firebase
         name: Deploy Staging (Firebase)
