--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -104,7 +104,7 @@ definitions:
     - step: &build-artifacts
         name: Build PWA Artifacts
         # image: cypress/base:10 # Because of Cypress dev dependency.
-        image: atlassian/default-image:2  # Image with Zip already installed
+        # image: atlassian/default-image:2  # Image with Zip already installed
         script:
           - npm install -g @angular/cli
           - npm install -g @ionic/cli
