Remove e2e all in one test to run Azure deployment test faster.

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -201,7 +201,7 @@ pipelines:
     '{dev_branch,develop,cypress-grouping}':
       - step: *code-linting
       # - step: *e2e-ingress
-      - step: *e2e-all-in-one-run
+      # - step: *e2e-all-in-one-run
       # - parallel:
       #     # Run Cypress Tests in parallel (6 machines)
       #     - step: 
