--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -103,9 +103,10 @@ definitions:
           - cypress/videos/**
     - step: &build-artifacts
         name: Build PWA Artifacts
-        # image: cypress/base:10 # Because of Cypress dev dependency.
+        image: cypress/base:10 # Because of Cypress dev dependency.
         # image: atlassian/default-image:2  # Image with Zip already installed
         script:
+          - sudo apt-get install zip
           - npm install -g @angular/cli
           - npm install -g @ionic/cli
           - npm ci
