--- a/src/web.config
+++ b/src/web.config
@@ -7,6 +7,8 @@
          <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
          <mimeMap fileExtension=".woff2" mimeType="font/woff2" />
          <mimeMap fileExtension=".webmanifest" mimeType="application/manifest+json" />
+         <remove fileExtension=".svg" />
+         <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
       </staticContent>
       <rewrite>
          <rules>
