Add support for Webp files in IIS.

--- a/src/web.config
+++ b/src/web.config
@@ -9,6 +9,7 @@
          <mimeMap fileExtension=".webmanifest" mimeType="application/manifest+json" />
          <remove fileExtension=".svg" />
          <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
+         <mimeMap fileExtension=".webp" mimeType="image/webp" />
       </staticContent>
       <rewrite>
          <rules>
