--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -210,6 +210,7 @@ pipelines:
   branches:
     '{dev_branch,develop,cypress-grouping}':
       - step: *code-linting
+      - step: *snyk-security-scan
       # - step: *e2e-ingress
       - step: *e2e-all-in-one-run
       # - parallel:
@@ -236,6 +237,7 @@ pipelines:
 
     master:
       - step: *code-linting
+      - step: *snyk-security-scan
       # - step: *e2e-ingress
       - step: *e2e-all-in-one-run
       # - parallel:
