--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "moment": "^2.27.0",
     "ng-lottie": "^0.3.2",
     "ngx-google-analytics": "^9.0.0",
+    "pdfmake": "^0.1.68",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
     "wait-on": "^5.2.1",
