Fix user settings issue when inserting to the database.

--- a/cypress/fixtures/deleteUserSettings.json
+++ b/cypress/fixtures/deleteUserSettings.json
@@ -1,14 +1,14 @@
 [
     {
     "username": "MD000175",
-    "appcode": "DPP",
+    "appCode": "DPP",
     "setting": "string",
     "property": "string",
     "value": "string"
     },
     {
         "username": "MD0001751",
-        "appcode": "DPP",
+        "appCode": "DPP",
         "setting": "string",
         "property": "string",
         "value": "string"
