--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -254,6 +254,12 @@ pipelines:
     build-no-test-and-deploy-to-az-production:
       - step: *build-artifacts
       - step: *deploy-to-azure-prod
+    build-no-test-and-deploy-to-az-staging-billing-uat:
+      - step: *build-artifacts
+      - step: *deploy-to-azure-billing-uat
+    build-no-test-and-deploy-to-az-staging-doc-lasco-uat:
+      - step: *build-artifacts
+      - step: *deploy-to-azure-doc-lasco-uat
 
   branches:
     '{dev_branch,develop,cypress-grouping}':
