--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@lottiefiles/lottie-player": "^0.5.1",
     "@synapsium/ngx-lottie": "^8.2.9",
     "@teamhive/lottie-player": "^1.0.0",
+    "angular-user-idle": "^2.2.5",
     "capacitor-datepicker": "0.0.2",
     "goog-webfont-dl": "^1.0.4",
     "highcharts": "^8.1.2",
