Update Web Config and Environment Vars for ISS shared host with API setup.

--- a/src/web.config
+++ b/src/web.config
@@ -2,10 +2,14 @@
 <configuration>
    <system.webServer>
       <staticContent>
-         <mimeMap fileExtension=".json" mimeType="application/json" />
+         <!-- For Angular App deployed to Windows Server 2019 with IIS 10 -->
+         <!-- Cannot add duplicate collection entry of type 'mimeMap' with unique key attribute 'fileExtension' set to '.json -->
+         <!-- <mimeMap fileExtension=".json" mimeType="application/json" /> -->
          <remove fileExtension=".woff" />
          <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
-         <mimeMap fileExtension=".woff2" mimeType="font/woff2" />
+         <!-- For Angular App deployed to Windows Server 2019 with IIS 10 -->
+         <!-- Cannot add duplicate collection entry of type 'mimeMap' with unique key attribute 'fileExtension' set to '.woff2' -->
+         <!-- <mimeMap fileExtension=".woff2" mimeType="font/woff2" /> -->
          <mimeMap fileExtension=".webmanifest" mimeType="application/manifest+json" />
          <remove fileExtension=".svg" />
          <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
