test pjnch to zoom

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ng-lottie": "^0.3.2",
     "ng2-pdf-viewer": "^8.0.1",
     "ngx-google-analytics": "^9.0.0",
+    "ngx-pinch-zoom": "^2.6.2",
     "pdfmake": "^0.1.68",
     "rxjs": "~6.5.1",
     "tslib": "^2.0.0",
