--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "ngx-pinch-zoom": "^2.6.2",
     "pdfmake": "^0.1.68",
     "rxjs": "~6.5.1",
+    "signature_pad": "^4.0.3",
     "tslib": "^2.0.0",
     "wait-on": "^5.2.1",
     "zone.js": "~0.11.4"
