--- a/src/app/Artifact/prod-doki-deployment.yaml
+++ b/src/app/Artifact/prod-doki-deployment.yaml
@@ -25,7 +25,7 @@ spec:
           volumeMounts:
           - name: nginx-default-conf
             mountPath: /etc/nginx/conf.d/default.conf
-            subPath: dev-default.conf
+            subPath: prod-default.conf
       volumes:
         - name: nginx-default-conf
           configMap:
