--- a/src/app/Artifact/dev-doki-deployment.yaml
+++ b/src/app/Artifact/dev-doki-deployment.yaml
@@ -16,16 +16,16 @@ spec:
         - name: dev-doki
           image: chhregistry.azurecr.io/doki:#{Build.BuildId}#
           env:
-          - name: API_URL
-            value: https://api01.chonghua.com.ph
-          - name: STRAPI_URL
-            value: https://strapi.chonghua.com.ph
+            - name: API_URL
+              value: https://api.chonghua.com.ph
+            - name: STRAPI_URL
+              value: https://strapi.chonghua.com.ph
           ports:
-          - containerPort: 80
+            - containerPort: 80
           volumeMounts:
-          - name: nginx-default-conf
-            mountPath: /etc/nginx/conf.d/default.conf
-            subPath: dev-default.conf
+            - name: nginx-default-conf
+              mountPath: /etc/nginx/conf.d/default.conf
+              subPath: dev-default.conf
       volumes:
         - name: nginx-default-conf
           configMap:
