--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -33,5 +33,17 @@
         ]
       }
     }
+  ],
+  "dataGroups": [
+    {
+      "name": "app",
+      "urls": [],
+      "cacheConfig": {
+        "strategy": "freshness",
+        "maxSize": 0,
+        "maxAge": "0s",
+        "timeout": "0s"
+      }
+    }
   ]
 }
