--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -8,7 +8,7 @@
   "assetGroups": [
     {
       "name": "app",
-      "installMode": "lazy",
+      "installMode": "prefetch",
       "resources": {
         "files": [
           "/favicon.ico",
