testing to add discharge instruction

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "ngx-indexed-db": "^11.0.2",
     "ngx-pinch-zoom": "^2.6.2",
     "pdfmake": "^0.1.68",
-    "rxjs": "~6.5.1",
+    "rxjs": "^6.6.7",
     "signature_pad": "^4.0.3",
     "zone.js": "~0.11.4"
   },
@@ -49,6 +49,7 @@
     "@angular/compiler": "~12.2.16",
     "@angular/compiler-cli": "~12.2.16",
     "@compodoc/compodoc": "^1.1.11",
+    "@ionic/angular-toolkit": "^2.3.3",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
