--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -2,8 +2,8 @@
   "$schema": "./node_modules/@angular/service-worker/config/schema.json",
   "index": "/index.html",
   "appData": {
-    "version": "3.8.3",
-    "changelog": "Version 3.8.3 release."
+    "version": "3.9.0",
+    "changelog": "Version 3.9.3=0 release."
   },
   "assetGroups": [
     {
